methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: not found: value faireV1
                    def rangee(){faireV1(Color.RED);faireV2(Color.BLUE);
                                 ^PatternPicture:4: error: not found: value faireV2
                    def rangee(){faireV1(Color.RED);faireV2(Color.BLUE);
                                                    ^