methods.picture.PatternPicture.scala.code
override def run() {def faireV(c:Color) 
             {avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche()}
                    
                    def rangee(){faireV1(Color.RED);faireV2(Color.BLUE);
}
rangee()
                   }